fixes button stretch

--- a/uiElements/style.css
+++ b/uiElements/style.css
@@ -6,6 +6,7 @@ border-radius: 100%;
 box-sizing: border-box;
 box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 z-index: 2147483644;
+padding: 0px 6px;
 }
 
 #capture-button-image {
